emu_tests/src/load_read_4.stderr
error[E0277]: the trait bound `ocl::standard::buffer::WriteSrc<'_, f32>: std::convert::From<&[f64]>` is not satisfied
 --> $DIR/load_read_4.rs:4:1
  |
4 | #[gpu_use]
  | ^^^^^^^^^^ the trait `std::convert::From<&[f64]>` is not implemented for `ocl::standard::buffer::WriteSrc<'_, f32>`
  |
  = help: the following implementations were found:
            <ocl::standard::buffer::WriteSrc<'d, T> as std::convert::From<&'a ocl::r#async::rw_vec::RwVec<T>>>
            <ocl::standard::buffer::WriteSrc<'d, T> as std::convert::From<&'d [T]>>
            <ocl::standard::buffer::WriteSrc<'d, T> as std::convert::From<&'d std::vec::Vec<T>>>
            <ocl::standard::buffer::WriteSrc<'d, T> as std::convert::From<ocl::r#async::order_lock::FutureGuard<std::vec::Vec<T>, ocl::r#async::order_lock::ReadGuard<std::vec::Vec<T>>>>>
            <ocl::standard::buffer::WriteSrc<'d, T> as std::convert::From<ocl::r#async::rw_vec::RwVec<T>>>
  = note: required because of the requirements on the impl of `std::convert::Into<ocl::standard::buffer::WriteSrc<'_, f32>>` for `&[f64]`

error[E0308]: mismatched types
 --> $DIR/load_read_4.rs:4:1
  |
4 | #[gpu_use]
  | ^^^^^^^^^^
  | |
  | expected `f32`, found `f64`
  | expected due to this
  |
  = note: expected reference `&[f32]`
             found reference `&[f64]`

error[E0308]: mismatched types
 --> $DIR/load_read_4.rs:4:1
  |
4 | #[gpu_use]
  | ^^^^^^^^^^ expected `f32`, found `f64`
  |
  = note: expected reference `&[f32]`
             found reference `&[f64]`

error[E0277]: the trait bound `ocl::standard::buffer::ReadDst<'_, f32>: std::convert::From<&mut [f64]>` is not satisfied
 --> $DIR/load_read_4.rs:4:1
  |
4 | #[gpu_use]
  | ^^^^^^^^^^ the trait `std::convert::From<&mut [f64]>` is not implemented for `ocl::standard::buffer::ReadDst<'_, f32>`
  |
  = help: the following implementations were found:
            <ocl::standard::buffer::ReadDst<'d, T> as std::convert::From<&'a ocl::r#async::rw_vec::RwVec<T>>>
            <ocl::standard::buffer::ReadDst<'d, T> as std::convert::From<&'d mut [T]>>
            <ocl::standard::buffer::ReadDst<'d, T> as std::convert::From<&'d mut std::vec::Vec<T>>>
            <ocl::standard::buffer::ReadDst<'d, T> as std::convert::From<ocl::r#async::order_lock::FutureGuard<std::vec::Vec<T>, ocl::r#async::order_lock::WriteGuard<std::vec::Vec<T>>>>>
            <ocl::standard::buffer::ReadDst<'d, T> as std::convert::From<ocl::r#async::rw_vec::RwVec<T>>>
  = note: required because of the requirements on the impl of `std::convert::Into<ocl::standard::buffer::ReadDst<'_, f32>>` for `&mut [f64]`

error[E0606]: casting `&[f64]` as `*const [f32]` is invalid
 --> $DIR/load_read_4.rs:4:1
  |
4 | #[gpu_use]
  | ^^^^^^^^^^
